--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta charset="utf-8">
-  <title>DwA2ClientSeed</title>
+  <title>Fahova BCard</title>
   <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
